# tg_bot_parser

./: README.md  config.py  crud.py  logger.py  main.py  parser.py  pyproject.toml  telegram.py  webhook_old.py
db_service/: database.py  models.py  schemas.py
db_service/crud/: Item.py  Subscription.py  User.py  item_crud.py  price_crud.py  subscription_crud.py  user_crud.py
db_service/schemas/: Item_schema.py  Price.py  Price_schema.py  Subscription.py  User.py  User_schema.py  item_schema.py  price_schema.py  subscription_schema.py  user_schema.py
